--- a/css/tarifs.css
+++ b/css/tarifs.css
@@ -39,6 +39,14 @@ h1
 /*header part*/
 
 /*nav part*/
+nav
+{
+  border: 2.5px solid black;
+  border-radius: 20px;
+  height: 70px;
+  width: 50%;
+  margin: 30px auto;
+}
 nav li
 {
   display: inline;
@@ -57,6 +65,7 @@ nav ul
   padding:0;
   white-space:nowrap;
   text-align: center;
+  margin-top: 10px;
 }
 
 nav ul li:nth-child(1) a
@@ -98,16 +107,11 @@ nav ul li a:hover,ul li a:focus
   transition:background-color .3s ease .4s;
 }
 
-nav ul li a:focus
-{
-  border-bottom:3px solid black;
-}
-
 nav ul li:last-child::after
 {
   content:"";
   position:absolute;
-  left:330px;
+  left:4.3em;
   bottom:-20px;
   display:block;
   width:2.3em;
@@ -119,24 +123,24 @@ nav ul li:last-child::after
 
 nav ul li:nth-child(1):hover ~ li:last-child::after
 {
-  left:8.3em;
+  left:0.1em;
   width:2.3em;
 }
 
 nav ul li:nth-child(2):hover ~ li:last-child::after
 {
-  left:12.7em;
+  left:4.3em;
   width:2.3em;
 }
 
 nav ul li:nth-child(3):hover ~ li:last-child::after
 {
-  left:16.9em;width:2em;
+  left:8.5em;width:2em;
 }
 
 nav ul li:last-child:hover::after
 {
-  left:20.6em;width:2.3em;
+  left:12.3em;width:2.3em;
 }
 /*nav part*/
 
@@ -201,7 +205,6 @@ footer a
 
 footer a:hover
 {
-  text-decoration: underline;
-  color: black;
+  font-weight: bolder;
 }
 /*footer part*/
