--- a/css/tarifs.css
+++ b/css/tarifs.css
@@ -145,6 +145,14 @@ nav ul li:last-child:hover::after
 /*nav part*/
 
 /*section part*/
+section h2
+{
+  font-family: 'beyond', cursive;
+  font-size: 2em;
+  text-align: center;
+  margin-top: 2em;
+}
+
 .tableau
 {
   margin: 5% 0% 5% 21%;
